dag2/04-container/k8s/sample-cluster/myservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: service01
  labels:
    app: myservice
spec:
  selector:
    app: myservice
  ports:
    - port: 8080
      name: http
      targetPort: 8080
