dag2/04-container/k8s/sample-cluster/myservice-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myservice
  namespace: service01
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: myservice-leffen-com-tls
      hosts:
        - myservice.leffen.com
  rules:
  - host: myservice.leffen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 8080
